# jobmatchskr

./: .gitignore
backend/django-backend/: .env  pyproject.toml
backend/django-backend/apps/jobapplications/: apps.py  models.py
backend/django-backend/apps/jobapplications/migrations/: 0001_initial.py
backend/django-backend/apps/joblistings/: admin.py  apps.py  models.py
backend/django-backend/apps/joblistings/migrations/: 0001_initial.py
backend/django-backend/apps/jobpreferences/: admin.py  apps.py  models.py
backend/django-backend/apps/jobpreferences/migrations/: 0001_initial.py
backend/django-backend/apps/jobrecommendations/: admin.py  apps.py  models.py
backend/django-backend/apps/jobrecommendations/migrations/: 0001_initial.py
backend/django-backend/apps/resumes/: admin.py  models.py
backend/django-backend/apps/resumes/migrations/: 0001_initial.py
backend/django-backend/apps/users/: models.py  serializer.py  urls.py  views.py
backend/django-backend/apps/users/migrations/: 0001_initial.py
backend/django-backend/config/: settings.py  urls.py
